[tool.poetry]
name = "repl-nix-acmecoyotebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = ">=3.10.0,<3.12"
asgiref = "^3.8.1"
flask = "^3.0.3"
telegram = "^0.0.1"
uvicorn = "^0.31.0"
cryptography = "^43.0.1"
python-telegram-bot = "^21"
requests = "^2"
PyJWT = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
